Updated HTML File

--- a/Java0407.html
+++ b/Java0407.html
@@ -1,6 +1,5 @@
 <html>
-<p> This file launches the 'A' applet: A.class! </p>
-<applet code="AppletTest.class" height=200 width=320>
-No Java?!
-</applet>
+  <body>
+    <applet code="AppletTest.class" height=200 width=320></applet>
+  </body>
 </html>
